<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Generika</string>
    <string name="oddb_org" translatable="false">ODDB.org - Open Drug Database</string>
    <!-- activities -->
    <string name="settings">Settings</string>
    <string name="information">About</string>
    <string name="barcode_capture">Barcode Capture</string>
    <string name="importer">Importer</string>
    <string name="receipt">Prescription</string>
    <string name="web_view">Web View</string>
    <string name="price_comparison">Price Comparison</string>
    <!-- drawer menus/titles -->
    <string name="barcodes">Medications</string>
    <string name="amkfiles">Prescriptions</string>
    <string name="interactions">Interactions</string>

    <!-- [settings]-->
    <!-- groups -->
    <string name="settings_search">Search</string>
    <string name="settings_app">Application</string>
    <!-- search_type -->
    <string name="settings_search_type_name">Type</string>
    <string name="settings_search_type_dialog_title">Select Type</string>
    <string name="settings_search_type_dialog_description">Document type displayed after barcode scan.</string>
    <!-- search_lang -->
    <string name="settings_search_lang_name">Language</string>
    <string name="settings_search_lang_dialog_title">Select Language</string>
    <string name="settings_search_lang_dialog_description">Language specified for search result web page.</string>
    <!-- app_use_system_locale -->
    <string name="settings_app_use_system_locale_name">Use System Locale</string>
    <string name="settings_app_use_system_locale_summary">Set application locale same with system\'s one, or else \"de\" (default)</string>
    <!-- app_locale -->
    <string name="settings_app_locale_name">Locale</string>
    <string name="settings_app_locale_dialog_title">Select Locale</string>
    <string name="settings_app_locale_dialog_description">Locale used for this application UI.</string>
    <!-- names (search_type) -->
    <string name="pv_fullname">Price Comparison</string>
    <string name="pi_fullname">Consumer information</string>
    <string name="fi_fullname">Professional information</string>
    <!-- values (search_type) -->
    <string name="search_type_pv" translatable="false">pv</string>
    <string name="search_type_pi" translatable="false">pi</string>
    <string name="search_type_fi" translatable="false">fi</string>

    <!-- [receipt] -->
    <string name="receipt_operator_section_title">Doctor</string>
    <string name="receipt_patient_section_title">Patient</string>
    <string name="receipt_products_section_title">Medications (%d)</string>

    <!-- [descriptions] -->
    <!-- information -->
    <string name="information_text">
      <![CDATA[
      <h1>Generika for Android</h1>
      <br/>
      <p>Price comparison between Original and Generic Drug, Patient-Information (package leaflet), Doctors Information, Expiry Date, Prescription Import via AmiKo Desitin.</p>
      <br/>
      <p>Source code is available at <a href="https://github.com/zdavatz/generika_android">https://github.com/zdavatz/generika_android</a>.</p>
      <br/>
      <p><a href="http://www.ywesee.com">© ywesee GmbH, GPLv3.0.</a></p>
      <br/>
      <p><a href="https://itunes.apple.com/ch/app/amiko-desitin/id708142753?mt=12">Prescriptions can be generated with AmiKo for macOS.</a></p>
      <br/>
      <p><a href="https://itunes.apple.com/ch/app/amiko-desitin/id687642725?mt=8">Prescriptions can be generated with AmiKo for iOS</a></p>
      ]]>
    </string>
    <!-- search field -->
    <string name="product_search_box_hint">Search by name, GTIN (EAN-13) etc.</string>
    <string name="receipt_search_box_hint">Search by place, date or name etc.</string>

    <!-- [general words] -->
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="expiry_date">Expiry Date</string>

    <!-- [languages] -->
    <!-- name -->
    <string name="lang_de_name" translatable="false">Deutsch</string>
    <string name="lang_fr_name" translatable="false">Français</string>
    <string name="lang_en_name" translatable="false">English</string>
    <!-- abbr -->
    <string name="lang_de_abbr" translatable="false">de</string>
    <string name="lang_fr_abbr" translatable="false">fr</string>
    <string name="lang_en_abbr" translatable="false">en</string>

    <!-- [messages] -->
    <!-- barcode reader -->
    <string name="barcode_reader_hover_text">Hold rear camera out over the barcode of package</string>
    <!-- dialog (capture) -->
    <string name="fetch_info_result_dialog_title">Generika.cc says</string>
    <!-- dialog (import) -->
    <string name="title_import_failure">Import Error</string>
    <string name="title_import_success">Import</string>
    <string name="message_import_failure_invalid">Invalid file\n%s</string>
    <string name="message_import_failure_duplicated">Has already been imported\n%s</string>
    <string name="message_import_failure_unsaved">File could not be saved\n%s</string>
    <string name="message_import_failure_unknown">An known error occurred</string>
    <string name="message_import_success">Successfully imported\n%s</string>
    <!-- permission request messages -->
    <string name="permission_camera_rationale">
      Access to the camera is needed for detection</string>
    <string name="no_camera_permission">
      This application cannot run because it does not have the
      camera permission.  The application will now exit.</string>
    <!-- error messages -->
    <string name="low_storage_error">
      Face detector dependencies cannot be downloaded due to low device
      storage</string>
    <string name="no_internet_connection">
      No connection to the internet.</string>
    <string name="product_not_found">
      No product found on Generika.cc with the following GTIN:\n%s</string>
    <string name="product_not_found_gtin">
      No product found on Generika.cc with the following GTIN:\n%s</string>
    <string name="receipt_not_found">
      No .amk File was found.</string>
    <string name="invalid_barcode_found">
      Invalid barcode has been detected, please try again:\n%s</string>
    <string name="do_you_want_to_send_to_zurrose">Do you want to send to ZurRose?</string>
    <string name="error">Error</string>
    <string name="error_code">Error Code:</string>
    <string name="sent_to_zurrose">Prescription is sent to ZurRose.</string>

    <string name="preference_invalid_value">The value is invalid</string>
    <string name="preference_invalid_gln">GLN has to be a 13 digit number</string>
    <string name="preference_zr_customer_number">ZR Customer Number</string>

    <!-- Receipt add dialog -->
    <string name="receipt_add_title">Add Prescription</string>
    <string name="receipt_import_file">Import .amk File</string>

    <!-- Kostengutsprache -->
    <string name="kostengutsprache">Kostengutsprache</string>
    <string name="kostengutsprache_title">Kostengutsprache KVV 71 \u2013 IBD Gastroenterologie</string>
    <string name="kostengutsprache_pdf_title">Kostengutsprache zu Art. 71a-d KVV</string>
    <string name="kostengutsprache_ibd">IBD Gastroenterologie</string>
    <string name="kg_patient_section">Patient/in</string>
    <string name="kg_name">Name</string>
    <string name="kg_first_name">Vorname</string>
    <string name="kg_birth_date">Geburtsdatum</string>
    <string name="kg_gender_f">\u2640 W</string>
    <string name="kg_gender_m">\u2642 M</string>
    <string name="kg_street">Strasse</string>
    <string name="kg_zip_city">PLZ / Ort</string>
    <string name="kg_ahv_number">AHV-Nr.</string>
    <string name="kg_insurance_section">Versicherung</string>
    <string name="kg_insurer_name">Krankenversicherer</string>
    <string name="kg_insurer_number">Versicherten-Nr.</string>
    <string name="kg_diagnosis_section">Diagnose</string>
    <string name="kg_crohn">M. Crohn</string>
    <string name="kg_colitis">Colitis ulcerosa</string>
    <string name="kg_medication_section">Medikament</string>
    <string name="kg_physician_section">Arzt / \u00C4rztin</string>
    <string name="kg_zsr_number">ZSR-Nr.</string>
    <string name="kg_hospital">Spital / Praxis</string>
    <string name="kg_department">Abteilung</string>
    <string name="kg_date">Datum</string>
    <string name="kg_pdf_email">PDF / Email</string>
    <string name="kg_scan_prescription">Rezept scannen</string>
    <string name="kg_scan_insurance_card">Versichertenkarte scannen</string>

    <!-- Insurance Card Scanner -->
    <string name="insurance_card_scanner">Versichertenkarte Scanner</string>
    <string name="insurance_card_hint">Versichertenkarte in den Rahmen halten</string>

    <!-- Prescription Scanner -->
    <string name="prescription_scanner">Rezept Scanner</string>
    <string name="prescription_hint">Rezept vor die Kamera halten</string>
    <string name="prescription_qr_found">QR-Code erkannt\nJetzt aufnehmen f\u00FCr OCR</string>
    <string name="prescription_processing">Wird verarbeitet\u2026</string>
    <string name="prescription_capture_error">Fehler beim Aufnehmen</string>
</resources>
