<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
		xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- web search -->
    <androidx.preference.PreferenceCategory
        android:title="@string/settings_search">

				<org.oddb.generika.preference.AppListPreference
            android:key="kSearchType"
            android:title="@string/settings_search_type_name"
            android:dialogTitle="@string/settings_search_type_dialog_title"
            android:entries="@array/settings_search_type_names"
            android:entryValues="@array/settings_search_type_values"
            android:defaultValue="pv" />

				<org.oddb.generika.preference.AppListPreference
            android:key="kSearchLang"
            android:title="@string/settings_search_lang_name"
            android:dialogTitle="@string/settings_search_lang_dialog_title"
            android:entries="@array/settings_search_lang_names"
            android:entryValues="@array/settings_search_lang_values"
            android:defaultValue="de"/>

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="Profile">
        <org.oddb.generika.preference.AppEditTextPreference
            android:title="GLN"
            android:key="kProfileGLN"
            app:validationFormat="^[0-9]{13}$"
            app:validationMessage="@string/preference_invalid_gln"
            />
        <org.oddb.generika.preference.AppEditTextPreference
            android:title="ZSR Number"
            android:key="kProfileZSR"
            />
        <org.oddb.generika.preference.AppEditTextPreference
            android:title="@string/preference_zr_customer_number"
            android:key="kProfileZrCustomerNumber"
            />
    </androidx.preference.PreferenceCategory>

    <!-- application -->
    <androidx.preference.PreferenceCategory
        android:title="@string/settings_app">

				<androidx.preference.SwitchPreference
            android:key="kAppUseSystemLocale"
            android:title="@string/settings_app_use_system_locale_name"
            android:summary="@string/settings_app_use_system_locale_summary"
            android:defaultValue="true" />

				<org.oddb.generika.preference.AppListPreference
            android:key="kAppLocale"
            android:title="@string/settings_app_locale_name"
            android:dialogTitle="@string/settings_app_locale_dialog_title"
            android:entries="@array/settings_app_locale_names"
            android:entryValues="@array/settings_app_locale_values"
            android:defaultValue="de" />

    </androidx.preference.PreferenceCategory>

    <!-- cloud sync -->
    <!---
    <android.support.v7.preference.PreferenceCategory
        android:title="@string/settings_record">

				<android.support.v7.preference.SwitchPreferenceCompat
            android:key="kRecordSync"
            android:title="@string/settings_record_sync_name"
            android:summary="@string/settings_record_sync_summary"
            android:defaultValue="false" />

    </android.support.v7.preference.PreferenceCategory>
    -->

</androidx.preference.PreferenceScreen>
