<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group
      android:id="@+id/menu_top"
      android:checkableBehavior="single">

      <item
        android:id="@+id/navigation_item_products"
        android:icon="@drawable/ic_insert_photo_black_24dp"
        android:checked="true"
        android:title="@string/barcodes" />

      <item
        android:id="@+id/navigation_item_interactions"
        android:icon="@drawable/ic_report_problem_black_24dp"
        android:checked="false"
        android:checkable="false"
        android:title="@string/interactions" />
   </group>

   <group
      android:id="@+id/menu_bottom"
      android:checkableBehavior="single">

      <item
        android:id="@+id/navigation_item_receipts"
        android:icon="@drawable/ic_move_to_inbox_black_24dp"
        android:title="@string/amkfiles" />

  </group>
</menu>
